# src/controllers/productController.js
@@ -1,15 +1,18 @@
 /**
  * @file configures the product API's
  */
+import * as productService from '#services/productService';
 
 /**
  * Method to handle sell product API request
  *
- * @param {Object} _req  request object
+ * @param {Object} req  request object
  * @param {Object} res response object
  * @param {Function} _next the chained function
  */
-async function sellProduct(_req, res, _next) {
+async function sell(req, res, _next) {
+  const productId = req.params?.productId;
+  const product = await productService.deleteById(productId);
   res.status(204).send();
 }
 
@@ -20,11 +23,12 @@ async function sellProduct(_req, res, _next) {
  * @param {Object} res response object
  * @param {Function} _next the chained function
  */
-async function getAllProducts(_req, res, _next) {
-  res.status(204).send();
+async function getAll(_req, res, _next) {
+  const result = await productService.getAll();
+  res.status(200).send(result);
 }
 export {
-  sellProduct,
-  getAllProducts,
+  sell,
+  getAll,
 };
 
